# Sistemas_en_Tiempo_Real-

./: .gitignore
Ejemplo 1/: CODIGOS LINUX.txt
Parcial_1/: CMakeLists.txt  README.md
Parcial_1/main/: CMakeLists.txt  analog.c  analog.h  app_commands.c  app_commands.h  board_config.h  button_unit.c  button_unit.h  main.c  rgb_led.c  rgb_led.h  temp_control.c  temp_control.h
TRABAJO_5_INTENSIDAD_BOTONES/TRABAJO_5_Control_Intensidad_Led_Rgb_Esp32c6/: CMakeLists.txt  README.md
TRABAJO_5_INTENSIDAD_BOTONES/TRABAJO_5_Control_Intensidad_Led_Rgb_Esp32c6/main/: CMakeLists.txt  main.c  rgb_led.c  rgb_led.h
TRABAJO_6_NTC_Y_POTEN/NTC_Y_POTENCIOMETRO/: CMakeLists.txt  README.md
TRABAJO_6_NTC_Y_POTEN/NTC_Y_POTENCIOMETRO/main/: CMakeLists.txt  analog.c  analog.h  board_config.h  button.c  button.h  led_rgb.c  led_rgb.h  main.c
TRABAJO_6_NTC_Y_POTENCIOMETRO/: .gitignore  CMakeLists.txt  README.md
TRABAJO_6_NTC_Y_POTENCIOMETRO/main/: CMakeLists.txt  analog.c  analog.h  board_config.h  button.c  button.h  led_rgb.c  led_rgb.h  main.c
TRABAJO_7_UART/main/: CMakeLists.txt  analog.c  analog.h  board_config.h  button.c  button.h  led_rgb.c  led_rgb.h  main.c  uart_cmd.c  uart_cmd.h
TRABAJO_8_PAGINA_WEB_ESP32C6/: .gitignore  CMakeLists.txt  sdkconfig
TRABAJO_8_PAGINA_WEB_ESP32C6/main/: CMakeLists.txt  http_server.c  main.c  rgb_led.c  wifi_app.c  wifi_app.h
TRABAJO_8_PAGINA_WEB_ESP32C6/main/webpage/: app.css  app.js  index.html
TRABAJO_8_PAGINA_WEB_ESP32C6/main/webpage_original/: app.css  app.js  index.html
Trabajo_1_Led_Estados/: README.md  gpio_example_main.c
