idf_component_register(
    SRCS
        "main.c"
        "analog.c"
        "temp_control.c"
        "rgb_led.c"
        "button_unit.c"
        "app_commands.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_adc
        esp_driver_gpio
        esp_driver_ledc
        esp_timer
        log
)